[package]
name = "csr"
version = "0.6.4"
authors = ["abyss <derribado@tutanota.com>"]
description = """
csr is a library for encrypting and decrypting many types using caesar
cipher. This shouldn't be used for any serious security but was more of
an exercise in generics and creating a rust crate.
"""
homepage = "https://git.cryptid.cc/lost/csr"
repository = "https://git.cryptid.cc/lost/csr"
documentation = "https://docs.rs/csr"
readme = "README.md"
keywords = ["caesar", "cipher"]
categories = ["text-processing"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
num = "0.2.1"
